apps/namespaces/media-server/plex/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - name: http
      port: 32400
      protocol: TCP
      targetPort: http
      nodePort: 32400
  selector:
    app: plex
  type: NodePort
