apps/namespaces/media-server/plex/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media-server
spec:
  rules:
    - host: plex.home
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  number: 80
            path: /
            pathType: Prefix
